--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/mysql/my.cnf
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/mysql/my.cnf
@@ -23,5 +23,8 @@ log-bin=mysql-bin
 binlog-format=row
 binlog-row-image=full
 max_connections=600
+default-authentication-plugin=mysql_native_password
+sql_mode=
+lower_case_table_names=1
 # for mysql 8.0
 secure_file_priv=/var/lib/mysql
