--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/postgresql/postgresql.conf
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/postgresql/postgresql.conf
@@ -17,6 +17,7 @@
 
 listen_addresses = '*'
 wal_level = logical
+max_connections = 600
 max_replication_slots = 10
 log_timezone = 'Asia/Shanghai'
 datestyle = 'iso, mdy'
