--- a/shardingsphere-infra/shardingsphere-infra-rewrite/pom.xml
+++ b/shardingsphere-infra/shardingsphere-infra-rewrite/pom.xml
@@ -43,5 +43,12 @@
             <artifactId>shardingsphere-sql-translator-native-provider</artifactId>
             <version>${project.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-test-fixture</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
