--- a/shardingsphere-kernel/shardingsphere-sql-translator/shardingsphere-sql-translator-spring/shardingsphere-sql-translator-spring-namespace/pom.xml
+++ b/shardingsphere-kernel/shardingsphere-sql-translator/shardingsphere-sql-translator-spring/shardingsphere-sql-translator-spring-namespace/pom.xml
@@ -21,16 +21,35 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.shardingsphere</groupId>
-        <artifactId>shardingsphere-sql-translator</artifactId>
+        <artifactId>shardingsphere-sql-translator-spring</artifactId>
         <version>5.1.3-SNAPSHOT</version>
     </parent>
-    <artifactId>shardingsphere-sql-translator-spring</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>shardingsphere-sql-translator-spring-namespace</artifactId>
     <name>${project.artifactId}</name>
     
-    <modules>
-        <module>shardingsphere-sql-translator-spring-boot-starter</module>
-        <module>shardingsphere-sql-translator-spring-namespace</module>
-    </modules>
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-sql-translator-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-spring-namespace-infra</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
